<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ContactDialer</string>
    <string name="word_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="word_about">About</string>
    <string name="email">yeshuhao13@gmail.com</string>
    <string name="version">2.02 Jan, 2014</string>
    <string name="word_exit">Exit</string>
    <string name="word_save">Save</string>
    <string name="word_cancel">Cancel</string>
    <string name="notf_version">version:\n</string>
    <string name="notf_author">written by:\n</string>
    <string name="word_dial">Dial</string>
    <string name="notf_dialing">It\'s Dial Now !</string>
    <string name="notf_original_number">Original Number: </string>
    <string name="setting_nav_pref">Preference</string>
    <string name="setting_nav_user">Modes</string>
    <string name="word_edit">Edit</string>
    <string name="word_delete">Delete</string>
    <string name="user_edit_name">Mode Edit</string>
    <string name="word_name">Name</string>
    <string name="word_country">Country</string>
    <string name="word_district">District</string>
    <string name="word_group">Group</string>
    <string name="word_in_prefix">InGroupPrefix</string>
    <string name="word_out_prefix">OutGroupPrefix</string>
    <string name="word_mobile_prefix">MobilePrefix</string>
    <string name="word_add">Add</string>
    <string name="equal_name_notification">Activated mode should not be removed!</string>
    <string name="nav_main_contacts">Contacts</string>
    <string name="nav_main_log">Logs</string>
    <string name="label_sms_in">SMS Inbox</string>
    <string name="label_sms_out">SMS Sent</string>
    <string name="label_edit_filter">Edit Filter</string>
    <string name="label_in_coming">In Coming</string>
    <string name="label_out_going">Out Going</string>
    <string name="label_missed">Missed</string>
    <string name="word_duration">Duration</string>
    <string name="word_interval">Interval</string>
    <string name="word_volume">Volume</string>
    <string name="word_filter">Filter</string>
</resources>